--- a/css/resume.css
+++ b/css/resume.css
@@ -111,6 +111,7 @@ nav ul li:hover {
 .one p {
 	line-height: 2;
 	font-size: 20px;
+	margin-bottom: 20px;
 }
 
 .one .imageContain {
@@ -122,6 +123,10 @@ nav ul li:hover {
 	width: 30%;
 	margin: 30px;
 	border: 10px solid lightgray;
+}
+
+#on_left {
+	text-align: center;
 }
 
 .two {
@@ -152,7 +157,14 @@ nav ul li:hover {
 #showContainer a {
 	text-decoration: none;
 	color: #000;
-	font-size: 22px;
+	font-size: 40px;
+	
+}
+
+#showContainer .caption {
+	background: rgba(255, 255, 255, 0.5);
+	padding: 5px; 
+	border-radius: 5px;
 }
 
 #showContainer .imageContainer .slide_img {
@@ -162,15 +174,15 @@ nav ul li:hover {
 .navButton {
 	cursor: pointer;
 	float: left;
-	width: 25px;
-	height: 22px;
+	width: 110px;
+	height: 20px;
 	padding: 10px;
 	margin-right: 5px;
 	overflow: hidden;
 	text-align: center;
 	color: white;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 20px;
 	background: #000000;
 	opacity: 0.65;
 	user-select: none;
