--- a/css/resume.css
+++ b/css/resume.css
@@ -279,6 +279,7 @@ form {
 }
 
 input, textarea {
+	font-family: 'Quattrocento', Serif;
 	background: #f2f2f2;
     padding: 10px;
     font-size: 25px;
@@ -294,14 +295,19 @@ textarea {
 }
 
 .submit_button {
-	background: gray;
+	font-family: 'Oswald', Sans-Serif;
+	text-transform: uppercase;
+	background: #9999ff;
 	color: white;
 	width: 50%;
     padding: 30px;
 }
 
 .submit_button:hover {
-	background: lightblue;
+	background: #e6e6ff;
+	color: #000;
+	box-shadow: 2px 2px 10px #000;
+	transition: all 1s;
 }
 
 @media (max-width: 800px) {
