added contact info to form

--- a/css/resume.css
+++ b/css/resume.css
@@ -283,6 +283,11 @@ nav ul li:hover {
 	width: 100%;
 }
 
+.three h3 {
+	text-align: center;
+	margin-top: 10px;
+}
+
 form {
 	text-align: center;
 	margin: auto;
