--- a/css/resume.css
+++ b/css/resume.css
@@ -283,6 +283,11 @@ nav ul li:hover {
 	border: 2px solid #000;
 	box-shadow: 5px 5px 10px gray;
 	border-radius: 5px;
+	opacity: 0.8;
+}
+
+.two .proj .proj-pic img:hover {
+	opacity: 1;
 }
 
 .two .proj .proj-text {
